# keypro_coding_challenge

./: Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
api/: admin.py  models.py  serializers.py  views.py
api/migrations/: 0001_initial.py
api_app/: models.py  serializers.py
api_app/migrations/: 0001_initial.py  0002_rename_user_pointofinterest_created_by.py
backend/: manage.py  pyproject.toml
backend/api_app/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/api_app/migrations/: 0001_initial.py
backend/keypro/: asgi.py  settings.py  urls.py  wsgi.py
django/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/public/: index.css  index.html
frontend/src/: App.tsx  index.tsx
frontend/src/api/: authService.ts  poiService.ts
frontend/src/components/: Auth.tsx  Dashboard.tsx  Login.tsx  Map.tsx  POIForm.tsx  POIPopup.tsx  Register.tsx
keypro/: settings.py  urls.py
